platform-components/model-observability/langfuse-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  namespace: genai
  labels:
    app.kubernetes.io/name: LoadBalancerController
  name: alb
spec:
  controller: eks.amazonaws.com/alb
  parameters:
    apiGroup: eks.amazonaws.com
    kind: IngressClassParams
    name: params

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: langfuse-web-ingress-alb
  namespace: genai
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: langfuse-web
                port:
                  number: 3000
